--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,10 @@
   <body> 
     <h1>Idea Board Site</h1>
     <p>Basic site to post project ideas.</p>
+    <form action="/idea" method="POST">
+      <input type="text" placeholder="Title" name="title">
+      <input type="text" placeholder="Description" name="descrption">
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
