added css styles

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <h1>Idea Board Site</h1>
     <p>Basic site to post project ideas.</p>
     <form action="/idea" method="POST">
-      <input type="text" placeholder="Idea" name="idea">
-      <input type="text" placeholder="Description" name="description">
+      <input type="text" placeholder="Idea" name="idea" class="ideaBox">
+      <input type="text" placeholder="Description" name="description" class="descriptionBox">
     <button type="submit">Submit</button>
   </form>
   </body>
