--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
-<!doctype html>
-  <html>
-   <head>
-    <title>IdeaBoard App</title>
-    <link rel='stylesheet' href='/styles/style.css' type='text/css'/>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>RIdeaBoard App</title>
+    <!-- Not present in the tutorial. Just for basic styling. -->
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <script src="https://unpkg.com/react@15.3.0/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.0/dist/react-dom.js"></script> 
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="https://unpkg.com/jquery@3.1.0/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
   </head>
-  <body> 
-    <h1>Idea Board Site</h1>
-    <p>Basic site to post project ideas.</p>
-    <form action="/idea" method="POST">
-      <input type="text" placeholder="Idea" name="idea" class="ideaBox">
-      <input type="text" placeholder="Description" name="description" class="descriptionBox">
-    <button type="submit">Submit</button>
-  </form>
+  <body>
+    <div id="ideaInput"></div>
+    <script type="text/babel" src="scripts/IdeaForm.js"></script> 
   </body>
 </html>
