altered db schema

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <script src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
   </head>
   <body>
-    <div id="ideaInput"></div>
-    <script type="text/babel" src="scripts/IdeaForm.js"></script> 
+    <div id="ideaForm"></div>
+    <script type="text/babel" src="scripts/ideaform.js"></script> 
   </body>
 </html>
