--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>RIdeaBoard App</title>
+    <title>IdeaBoard App</title>
     <!-- Not present in the tutorial. Just for basic styling. -->
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
