added list for ideas component

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,7 @@
   <body>
     <div id="ideaForm"></div>
     <script type="text/babel" src="scripts/ideaform.js"></script> 
+    <div id="ideaList"></div>
+    <script type="text/babel" src="scripts/idealist.js"></script> 
   </body>
 </html>
